# oca-queue

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md
.github/workflows/: pre-commit.yml  test.yml
queue_job/: README.rst  __manifest__.py  fields.py
queue_job/data/: queue_data.xml
queue_job/i18n/: it.po  queue_job.pot
queue_job/static/description/: index.html
queue_job/views/: queue_job_channel_views.xml  queue_job_function_views.xml  queue_job_views.xml
queue_job_cron/: README.rst  __manifest__.py
queue_job_cron/i18n/: it.po  queue_job_cron.pot
queue_job_cron/static/description/: index.html
queue_job_cron/views/: ir_cron_view.xml
queue_job_cron_jobrunner/: README.rst  __manifest__.py
queue_job_cron_jobrunner/i18n/: it.po  queue_job_cron_jobrunner.pot  zh_CN.po
queue_job_cron_jobrunner/static/description/: index.html
queue_job_subscribe/: __manifest__.py
queue_job_subscribe/i18n/: queue_job_subscribe.pot
setup/_metapackage/: pyproject.toml
test_queue_job/: __manifest__.py
test_queue_job/i18n/: it.po  test_queue_job.pot
