[project]
name = "odoo-addons-oca-queue"
version = "20240125.0"
dependencies = [
    "odoo-addon-queue_job>=masterdev,<17.1dev",
    "odoo-addon-queue_job_cron>=masterdev,<17.1dev",
    "odoo-addon-queue_job_cron_jobrunner>=masterdev,<17.1dev",
    "odoo-addon-queue_job_subscribe>=masterdev,<17.1dev",
    "odoo-addon-test_queue_job>=masterdev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: master",
]
